--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.11",
     "mocha": "^7.2.0",
     "should": "^13.2.3",
     "source-map-support": "^0.5.19",
