make labels configurable (format and width), and change the options to be a Partial<config> which saves a lot of boilerplate code

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "main": "./lib/index.js",
+  "main": "./lib/yeri.js",
   "files": [
     "lib",
     "bin/yeri"
