--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yeri",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "description": "draw full-color (text or SVG) time-series graphs",
   "keywords": [
     "graphite",
@@ -14,6 +14,7 @@
     "url": "git://github.com/robey/yeri.git"
   },
   "license": "Apache-2.0",
+  "sideEffects": false,
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf lib",
